# as1726_geotech

./: .gitignore  README.md  demo_psd.py  mkdocs.yml  pyproject.toml  run_main_gui.py  run_psd_gui.py
.github/workflows/: ci.yml  docs.yml
docs/: api.md  changelog.md  index.md  installation.md  requirements.txt  usage.md
help/psd/: README.md
src/as1726_geotech/: __init__.py  cpt.py  gui.py  main_gui.py  mc.py  psd.py  spt.py
tests/: test_basic.py  test_psd.py
