[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "as1726-geotech"
version = "0.0.1"
description = "Tools for AS1726 geotechnical site investigations."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5",
    "openpyxl>=3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
